<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">万维艺术</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left_drawer_no_login_tip">登录管理</string>
    <string name="left_drawer_no_login_tip2">发布新闻</string>
    <string name="left_drawer_item_search">搜索</string>
    <string name="left_drawer_item_favorite">拍卖</string>
    <string name="left_drawer_item_message">消息</string>
    <string name="left_drawer_item_offline">收藏</string>
    <string name="left_drawer_item_offline_cancel">取消离线</string>
    <string name="left_drawer_item_activity">活动</string>
    <string name="left_drawer_item_setting">关注</string>
    <string name="left_drawer_item_feedback">反馈</string>
    <string name="left_drawer_item_appstore">精彩应用</string>
    <string name="drawer_right_logout_hint_text">"登录后 可关注好友评论和收藏"</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="ss_have_a_rest">暂无更新, 休息一会儿</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_day_mode">日间模式</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">2G/3G网络流量</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_night_mode">注册</string>
    <string name="setting_use_swipe">左右翻页</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_use_help">使用帮助</string>
    <string name="app_copyright">© 77艺术网 77art.com</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">频道订阅    </string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="day_today">今天</string>
    <string name="day_yesterday">昨天</string>
    <string name="day_before">前天</string>
    <string name="search_count_fmt">发现%1$s篇文章</string>
    <string name="pattern_update">发现%1$d条更新</string>
    <string name="city_category_list_header">点击选择其他城市</string>
    <string name="city_category_list_hint">选择城市，立即查看本地新闻</string>
    <string name="city_category_list_notify_no_city">请先选择您关注的城市</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>

    <!-- 滑动区域文字及链接 -->
    <string name="title1">水墨村村民之陈永锵60后作品展</string>
    <string name="title2">【与水墨村一起去观展】快是怎样创作的</string>
    <string name="title3">吴冠中作品回顾展</string>
    <string name="title4">【古琴雅集】岭南派琴家在水墨村</string>
    <string name="title5">【与水墨村一起去观展】快是怎样创作的</string>

    <!-- 滑动区域文字及链接 -->
    <string name="title6">1/5</string>
    <string name="title7">2/5</string>
    <string name="title8">3/5</string>
    <string name="title9">4/5</string>
    <string name="title10">5/5</string>
    <string name="update_at">updated at:&#160;</string>

    <!-- 登陆,注册,重置密码文字 -->
    <string name="register">注&#160;册</string>
    <string name="phone">手机号码</string>
    <string name="verification">&#160;&#160;&#160;&#160;验证码</string>
    <string name="resend_verification">发送验证码</string>
    <string name="password">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="nickname">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;昵称</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="phone_null">手机号码不能为空</string>
    <string name="phone_error">请输入正确手机号码</string>
    <string name="verification_null">验证码不能为空</string>
    <string name="password_null">密码不能为空</string>
    <string name="confirm_password_null">请输入确认密码</string>
    <string name="nickname_null">昵称不能为空</string>
    <string name="password_error">确认密码错误</string>
    <string name="reset">找回密码/重置密码</string>
    <string name="login">登陆</string>
    <string name="no_account">没有账号?</string>
    <string name="forget_password">忘记密码?</string>
    <string name="photoalbum">从相册选取</string>
    <string name="camera">拍照上传</string>

</resources>