<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subscribe_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/bk"
        android:drawableLeft="@drawable/button_title_query"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_search"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10.0dip"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="13.0dip"
            android:background="@drawable/bk"
            android:text="搜新闻  "
            android:textColor="#919191"
            android:textSize="14dp" />

        <Button
            android:id="@+id/show_button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4.0dip"
            android:layout_marginRight="4.0dip"
            android:background="@drawable/bk"
            android:text="搜展览 "
            android:textColor="#919191"
            android:textSize="14dp" />

        <Button
            android:id="@+id/auction_button"
            android:layout_width="80dp"
            android:layout_marginLeft="4.0dip"
            android:layout_marginRight="4.0dip"
            android:layout_height="30dp"
            android:background="@drawable/bk"
            android:text="搜拍卖  "
            android:textColor="#919191"
            android:textSize="14dp" />

        <Button
            android:id="@+id/member_button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginRight="2.0dip"
            android:background="@drawable/bk"
            android:text="搜会员 "
            android:textColor="#919191"
            android:textSize="14dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonLayout" >

        <LinearLayout
            android:id="@+id/subscribe_main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/subscribe_bg"
            android:orientation="vertical"
            android:paddingBottom="14.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22.0dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/my_category_text"
                    style="@style/subscribe_my_tip_text"
                    android:text="@string/subscribe_my_category"
                    android:textColor="#e50101"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/my_category_tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:text="@string/subscribe_manager_category_info_2"
                    android:textColor="@color/subscribe_tip_text"
                    android:textSize="11.0sp"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:id="@+id/seperate_line"
                style="@style/subscribe_seperate_line" />

            <com.vrtart.view.DragGrid
                android:id="@+id/userGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                android:gravity="center"
                android:horizontalSpacing="14dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px" />

            <View
                android:id="@+id/seperate_line2"
                style="@style/subscribe_seperate_line" />

            <TextView
                android:id="@+id/more_category_text"
                style="@style/subscribe_more_tip_text"
                android:layout_gravity="center"
                android:layout_marginBottom="14.0dip"
                android:text="@string/subscribe_more_category" />

            <com.vrtart.view.OtherGridView
                android:id="@+id/otherGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                android:gravity="center"
                android:horizontalSpacing="14dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/category_layout"
        layout="@layout/channel_item"
        android:visibility="gone" />

    <TextView
        android:id="@+id/back_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:drawableLeft="@drawable/btn_back"
        android:onClick="doBack" />

</RelativeLayout>